--- a/form.html
+++ b/form.html
@@ -2,36 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>User Info Form</title>
+  <title>OG Jewelry - Form</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Cormorant+Garamond&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <div class="container">
-    <h2>User Information Form</h2>
+  <div class="form-container">
+    <h2 class="brand-name">OG Jewelry</h2>
+    <p class="subtitle">Tell us a bit about you</p>
+
     <form id="userForm">
-      <label>First Name:
-        <input type="text" name="firstName" required>
+      <label for="firstName">First Name:
+        <input type="text" id="firstName" name="firstName" required>
       </label>
 
-      <label>Last Name:
-        <input type="text" name="lastName" required>
+      <label for="lastName">Last Name:
+        <input type="text" id="lastName" name="lastName" required>
       </label>
 
-      <label>Address:
-        <input type="text" name="address" required>
+      <label for="address">Address:
+        <input type="text" id="address" name="address" required>
       </label>
 
-      <label>ZIP Code:
-        <input type="text" name="zipCode" required pattern="\d{5}" title="Enter a 5-digit ZIP code">
+      <label for="zipCode">ZIP Code:
+        <input type="text" id="zipCode" name="zipCode" required pattern="\d{5}" title="Enter a 5-digit ZIP code">
       </label>
 
-      <label>Age:
-        <input type="number" name="age" required min="0">
+      <label for="age">Age:
+        <input type="number" id="age" name="age" required min="0">
       </label>
 
-      <label>Sex:
-        <select name="sex" required>
+      <label for="sex">Sex:
+        <select id="sex" name="sex" required>
           <option value="">Select...</option>
           <option value="female">Female</option>
           <option value="male">Male</option>
@@ -59,6 +62,7 @@
 
       console.log("Submitting data:", payload);
 
+      // Replace with your real backend endpoint when ready
       const response = await fetch("https://your-backend-api.com/submit", {
         method: "POST",
         headers: {
