--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>OG Jewelry</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Cormorant+Garamond&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body class="dark">
+  <button id="darkToggle" class="dark-toggle">🌙</button>
   <div class="welcome-container">
+    <img src="images/logo.png" alt="OG Jewelry Logo" class="logo">
     <h1 class="brand-name">OG Jewelry</h1>
     <p class="subtitle">Fine craftsmanship since 2023</p>
     <a href="form.html" class="enter-button">Enter the Boutique →</a>
   </div>
+  <script>
+    document.getElementById('darkToggle').addEventListener('click', () => {
+      document.body.classList.toggle('dark');
+    });
+  </script>
 </body>
 </html>
