--- a/form.html
+++ b/form.html
@@ -1,14 +1,19 @@
+<!-- form.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>OG Jewelry - Form</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Cormorant+Garamond&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body class="dark">
+  <button id="darkToggle" class="dark-toggle">🌙</button>
   <div class="form-container">
+    <img src="images/logo.png" alt="OG Jewelry Logo" class="logo">
+    <img src="images/decor-top.jpg" alt="Decorative Jewelry" class="decor-img">
     <h2 class="brand-name">OG Jewelry</h2>
     <p class="subtitle">Tell us a bit about you</p>
 
@@ -53,30 +58,18 @@
   </div>
 
   <script>
+    document.getElementById('darkToggle').addEventListener('click', () => {
+      document.body.classList.toggle('dark');
+    });
+
     document.getElementById("userForm").addEventListener("submit", async function(e) {
       e.preventDefault();
-
       const formData = new FormData(this);
       const payload = Object.fromEntries(formData.entries());
       payload.timestamp = new Date().toISOString();
-
       console.log("Submitting data:", payload);
-
-      // Replace this with your backend endpoint
-      const response = await fetch("https://your-backend-api.com/submit", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify(payload)
-      });
-
-      if (response.ok) {
-        alert("Thanks for submitting!");
-        this.reset();
-      } else {
-        alert("Something went wrong. Please try again.");
-      }
+      alert("Thanks for submitting!");
+      this.reset();
     });
   </script>
 </body>
