--- a/form.html
+++ b/form.html
@@ -1,4 +1,3 @@
-<!-- form.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,31 +10,31 @@
 </head>
 <body class="dark">
   <button id="darkToggle" class="dark-toggle">🌙</button>
+
   <div class="form-container">
     <img src="images/logo.png" alt="OG Jewelry Logo" class="logo">
-    <img src="images/decor-top.jpg" alt="Decorative Jewelry" class="decor-img">
-    <h2 class="brand-name">OG Jewelry</h2>
+    
     <p class="subtitle">Tell us a bit about you</p>
 
     <form id="userForm">
       <label class="fade-field fade-delay-1">First Name:
-        <input type="text" name="firstName" required>
+        <input type="text" name="firstName" required placeholder="Enter your first name">
       </label>
 
       <label class="fade-field fade-delay-2">Last Name:
-        <input type="text" name="lastName" required>
+        <input type="text" name="lastName" required placeholder="Enter your last name">
       </label>
 
       <label class="fade-field fade-delay-3">Address:
-        <input type="text" name="address" required>
+        <input type="text" name="address" required placeholder="Street, city, state">
       </label>
 
       <label class="fade-field fade-delay-4">ZIP Code:
-        <input type="text" name="zipCode" required pattern="\d{5}" title="Enter a 5-digit ZIP code">
+        <input type="text" name="zipCode" required pattern="\d{5}" title="Enter a 5-digit ZIP code" placeholder="12345">
       </label>
 
       <label class="fade-field fade-delay-5">Age:
-        <input type="number" name="age" required min="0">
+        <input type="number" name="age" required min="0" placeholder="Your age">
       </label>
 
       <label class="fade-field fade-delay-6">Sex:
