--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,12 +10,13 @@
 </head>
 <body class="dark">
   <button id="darkToggle" class="dark-toggle">🌙</button>
-  <div class="welcome-container">
-    <img src="images/logo.png" alt="OG Jewelry Logo" class="logo">
-    <h1 class="brand-name">OG Jewelry</h1>
-    <p class="subtitle">Fine craftsmanship since 2023</p>
-    <a href="form.html" class="enter-button">Enter the Boutique →</a>
+
+  <div class="welcome-container hero-bg">
+    <img src="images/logo.png" alt="OG Jewelry Logo" class="logo fade-field fade-delay-1">
+    <p class="subtitle fade-field fade-delay-2">Fine craftsmanship since 2023</p>
+    <a href="form.html" class="enter-button fade-field fade-delay-3">Enter the Boutique →</a>
   </div>
+
   <script>
     document.getElementById('darkToggle').addEventListener('click', () => {
       document.body.classList.toggle('dark');
