--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Libre+Franklin:wght@300;400;600&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body class="dark">
+<body class="dark hero-bg">
   <button id="darkToggle" class="dark-toggle">🌙</button>
 
-  <div class="welcome-container hero-bg">
-    <img src="images/logo.png" alt="OG Jewelry Logo" class="logo fade-field fade-delay-1">
-    <p class="subtitle fade-field fade-delay-2">Fine craftsmanship since 1995</p>
-    <a href="form.html" class="enter-button fade-field fade-delay-3">Enter the Boutique →</a>
+  <div class="welcome-overlay fade-field fade-delay-1">
+    <img src="images/logo.png" alt="OG Jewelry Logo" class="logo">
+    <p class="subtitle">Fine craftsmanship since 1995</p>
+    <a href="form.html" class="enter-button">Enter the Boutique →</a>
   </div>
 
   <script>
