--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Libre+Franklin:wght@300;400;600&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body class="dark">
+<body class="dark form-bg">
   <button id="darkToggle" class="dark-toggle">🌙</button>
 
   <div class="form-container">
