--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <body class="dark hero-bg">
   <button id="darkToggle" class="dark-toggle">🌙</button>
 
-  <div class="welcome-overlay fade-field fade-delay-1">
-    <img src="images/logo.png" alt="OG Jewelry Logo" class="logo">
-    <p class="subtitle">Fine craftsmanship since 1995</p>
+  <div class="hero-button-wrapper fade-field fade-delay-1">
     <a href="form.html" class="enter-button">Enter the Boutique →</a>
   </div>
 
