--- a/form.html
+++ b/form.html
@@ -46,7 +46,7 @@
         </select>
       </label>
 
-      <label class="fade-field fade-delay-7">
+      <label class="fade-field fade-delay-7 checkbox-label">
         <input type="checkbox" name="consent" required>
         I agree to the collection and use of my data to improve my experience.
       </label>
