Position of button in front page is fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="dark hero-bg">
   <button id="darkToggle" class="dark-toggle">🌙</button>
 
-  <div class="hero-button-wrapper fade-field fade-delay-1">
+  <div class="hero-wrapper fade-field fade-delay-1">
     <a href="form.html" class="enter-button">Enter the Boutique →</a>
   </div>
 
