video of chain in the index file, and the fire with chain in the form file

--- a/form.html
+++ b/form.html
@@ -9,10 +9,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Libre+Franklin:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body class="dark form-bg">
+  <!-- 🔥 Background Video -->
+  <video autoplay muted loop playsinline class="bg-video">
+    <source src="videos/fire_camera_locked_fire_flowing.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
   <button id="darkToggle" class="dark-toggle">🌙</button>
 
   <div class="form-container">
-    <img src="images/logo.png" alt="OG Jewelry Logo" class="logo">
+
     <p class="subtitle">Create your account</p>
 
     <form id="userForm" novalidate>
