--- a/index.html
+++ b/index.html
@@ -1,34 +1,24 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OG Jewelry</title>
   <link rel="stylesheet" href="styleindex.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Libre+Franklin:wght@300;400;600&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body class="dark hero-bg">
-
-  <!-- Background video -->
-  <video autoplay muted loop playsinline class="background-video">
+<body>
+  <!-- Background Video -->
+  <video autoplay muted playsinline loop class="background-video">
     <source src="videos/background_optimized_cuban.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
-  <!-- Dark mode toggle -->
-  <button id="darkToggle" class="dark-toggle">🌙</button>
+  <!-- Clickable logo area -->
+  <div class="splash-logo" onclick="window.location.href='form.html'"></div>
 
-  <!-- Centered button -->
-  <div class="hero-wrapper fade-field fade-delay-1">
-    <a href="form.html" class="enter-button">Enter the Boutique →</a>
-  </div>
-
-  <script>
-    document.getElementById('darkToggle').addEventListener('click', () => {
-      document.body.classList.toggle('dark');
-    });
-  </script>
-
+  <!-- Optional dark mode toggle -->
+  <button class="dark-toggle" onclick="document.body.classList.toggle('dark')">🌙</button>
 </body>
 </html>
