--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="styleindex.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Libre+Franklin:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
+<script>
+  const linkZone = document.querySelector('.join-familia-zone');
+  linkZone.addEventListener('click', function (e) {
+    e.preventDefault();
+    document.body.classList.add('fade-out');
+    setTimeout(() => {
+      window.location.href = 'form.html';
+    }, 400); // delay to match fade
+  });
+</script>
 <body>
   <!-- Background Video -->
   <video autoplay muted playsinline loop class="background-video">
@@ -15,8 +25,8 @@
     Your browser does not support the video tag.
   </video>
 
-  <!-- Clickable logo area -->
-  <div class="splash-logo" onclick="window.location.href='form.html'"></div>
+  <!-- Clickable "Join la Familia" area -->
+  <div class="join-familia-zone" onclick="window.location.href='form.html'"></div>
 
   <!-- Optional dark mode toggle -->
   <button class="dark-toggle" onclick="document.body.classList.toggle('dark')">🌙</button>
