--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,16 +7,6 @@
   <link rel="stylesheet" href="styleindex.css">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Libre+Franklin:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
-<script>
-  const linkZone = document.querySelector('.join-familia-zone');
-  linkZone.addEventListener('click', function (e) {
-    e.preventDefault();
-    document.body.classList.add('fade-out');
-    setTimeout(() => {
-      window.location.href = 'form.html';
-    }, 400); // delay to match fade
-  });
-</script>
 <body>
   <!-- Background Video -->
   <video autoplay muted playsinline loop class="background-video">
@@ -26,9 +15,12 @@
   </video>
 
   <!-- Clickable "Join la Familia" area -->
-  <div class="join-familia-zone" onclick="window.location.href='form.html'"></div>
+  <div class="join-familia-zone"></div>
 
   <!-- Optional dark mode toggle -->
   <button class="dark-toggle" onclick="document.body.classList.toggle('dark')">🌙</button>
+
+  <!-- Custom behavior -->
+  <script src="scripts/index.js"></script>
 </body>
 </html>
