--- a/form.html
+++ b/form.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+    html, body {
+      background-color: #000;
+    }
+  </style>
   <meta charset="UTF-8">
   <title>OG Jewelry - Sign Up</title>
   <link rel="stylesheet" href="style.css">
